--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "type": "git",
     "url": "https://github.com/C0DE-L00P/task-extreme.git"
   },
-  
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,8 +19,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@types/react-virtualized": "^9.22.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
+    "react-virtualized": "^9.22.6",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
